# debt-simulation

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: build.md  distribute.md  resource.md
src/: cli.rs  main.rs
wix/: main.wxs
