[package]
name = "debt-simuration"
version = "0.1.0"
edition = "2021"
authors = ["OkuboSGMS"]
description = "Calculate Debt(Rust Practice)"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
